# PX4-Avoidance

./: .gitignore  README.md
avoidance/sim/worlds/: car_with_poles.world
avoidance_utils/: CMakeLists.txt  package.xml
avoidance_utils/src/: avoidance_topic_util.cpp  send_mavros_trajectory.cpp  test_circular_trajectory.cpp
global_planner/cfg/: GlobalPlannerNode.cfg
global_planner/include/global_planner/: cell.h  global_planner.h
global_planner/launch/: global_planner_depth-camera_car_world.launch  global_planner_octomap.launch
global_planner/resource/: global_planner.rviz
global_planner/src/nodes/: global_planner_node.cpp
local_planner/launch/: local_planner_depth-camera_car_world.launch
local_planner/src/nodes/: local_planner_nodelet.cpp
